src/core-crm/objects/Donation_Cause__c/Donation_Cause__c.object-meta.xml
<CustomObject>
    <description>Donation Cause stores the donation cause (or ‘designation’) data that a donor can donate to as well as data relating to setting up a new donation cause and publishing the cause on the QUT website.</description>
    <label>Donation Cause</label>
    <nameField>
        <label>Donation Cause</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Donation Causes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>