src/core-crm/objects/Donation_Cause__c/fields/Activation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Activation_End_Date__c</fullName>
    <description>The date the Donation Cause stops being able to receive donations.</description>
    <inlineHelpText>The date the Donation Cause stops being able to receive donations.</inlineHelpText>
    <label>Activation End Date</label>
    <type>Date</type>
</CustomField>