src/core-crm/objects/Donation_Cause__c/fields/Activation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Activation_Start_Date__c</fullName>
    <description>The date the Donation Cause is available to receive donations.</description>
    <inlineHelpText>The date the Donation Cause is available to receive donations.</inlineHelpText>
    <label>Activation Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>