src/core-crm/objects/Donation_Cause__c/fields/Archived_Date__c.field-meta.xml
<CustomField>
    <fullName>Archived_Date__c</fullName>
    <description>The date the donation cause was archived.</description>
    <inlineHelpText>The date the donation cause was archived.</inlineHelpText>
    <label>Archived Date</label>
    <type>Date</type>
</CustomField>