src/core-crm/objects/Donation_Cause__c/fields/Archived_Reason__c.field-meta.xml
<CustomField>
    <fullName>Archived_Reason__c</fullName>
    <description>The reason the donation cause was archived.</description>
    <inlineHelpText>The reason the donation cause was archived.</inlineHelpText>
    <label>Archived Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Donation Cause Discontinued</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>