src/core-crm/objects/Donation_Cause__c/fields/Donation_Cause__c.field-meta.xml
<CustomField>
    <fullName>Donation_Cause__c</fullName>
    <description>The Donation Cause name.</description>
    <inlineHelpText>The Donation Cause name.</inlineHelpText>
    <label>Donation Cause</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>