src/core-crm/objects/Donation_Cause__c/fields/Donation_Cause_Code__c.field-meta.xml
<CustomField>
    <fullName>Donation_Cause_Code__c</fullName>
    <description>The Donation Cause code.</description>
    <inlineHelpText>The Donation Cause code.</inlineHelpText>
    <label>Donation Cause Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>