src/core-crm/objects/Donation_Cause__c/fields/Donation_Cause_Description__c.field-meta.xml
<CustomField>
    <fullName>Donation_Cause_Description__c</fullName>
    <description>The Donation Cause description.</description>
    <inlineHelpText>The Donation Cause description.</inlineHelpText>
    <label>Donation Cause Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>