src/core-crm/objects/Donation_Cause__c/fields/Is_QUT_Giving_Cause__c.field-meta.xml
<CustomField>
    <fullName>Is_QUT_Giving_Cause__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies whether the Donation Cause is intended to be published on the QUT Giving webpage.</description>
    <inlineHelpText>Identifies whether the Donation Cause is intended to be published on the QUT Giving webpage.</inlineHelpText>
    <label>Is QUT Giving Cause</label>
    <type>Checkbox</type>
</CustomField>