src/core-crm/objects/Donation_Cause__c/fields/Is_Staff_Giving_Cause__c.field-meta.xml
<CustomField>
    <fullName>Is_Staff_Giving_Cause__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies whether the Donation Cause is intended to be published on the internal QUT Staff Portal.</description>
    <inlineHelpText>Identifies whether the Donation Cause is intended to be published on the internal QUT Staff Portal.</inlineHelpText>
    <label>Is Staff Giving Cause</label>
    <type>Checkbox</type>
</CustomField>