src/core-crm/objects/Donation_Cause__c/fields/Owner_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Full_Name__c</fullName>
    <description>The full name of the DEP user who is responsible for maintaining the Donation Cause.</description>
    <formula>IF(Owner:Queue.QueueName = null, (Owner:User.FirstName + &quot; &quot; + Owner:User.LastName), Owner:Queue.QueueName)</formula>
    <inlineHelpText>The full name of the DEP user who is responsible for maintaining the Donation Cause.</inlineHelpText>
    <label>Owner Full Name</label>
    <type>Text</type>
</CustomField>