src/core-crm/objects/Donation_Cause__c/fields/QUT_Giving_Publish_End_Date__c.field-meta.xml
<CustomField>
    <fullName>QUT_Giving_Publish_End_Date__c</fullName>
    <description>The date from when the Donation Cause should stop being published.</description>
    <inlineHelpText>The date from when the Donation Cause should stop being published.</inlineHelpText>
    <label>QUT Giving Publish End Date</label>
    <type>Date</type>
</CustomField>