src/core-crm/objects/Donation_Cause__c/fields/Ready_For_Publishing__c.field-meta.xml
<CustomField>
    <fullName>Ready_For_Publishing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the new Donation Cause is ready to be published online.</description>
    <inlineHelpText>Indicates if the new Donation Cause is ready to be published online.</inlineHelpText>
    <label>Ready For Publishing</label>
    <type>Checkbox</type>
</CustomField>