src/core-crm/objects/Donation_Cause__c/fields/Staff_Giving_Portal_Publish_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Staff_Giving_Portal_Publish_Start_Date__c</fullName>
    <description>The date from when the Donation Cause should be published.</description>
    <inlineHelpText>The date from when the Donation Cause should be published.</inlineHelpText>
    <label>Staff Giving Portal Publish Start Date</label>
    <type>Date</type>
</CustomField>