src/core-crm/objects/Donation_Cause__c/validationRules/Archived_Reason_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Archived_Reason_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR(ISCHANGED( Archived_Date__c ),
     ISCHANGED( Archived_Reason__c ),
     ISCHANGED( Archived_Comment__c )),
     ISPICKVAL(Archived_Reason__c , &apos;&apos; ),
 OR( NOT(ISBLANK(Archived_Date__c )) ,
     NOT(ISBLANK( Archived_Comment__c )))
)</errorConditionFormula>
    <errorDisplayField>Archived_Reason__c</errorDisplayField>
    <errorMessage>Mandatory Field</errorMessage>
</ValidationRule>