src/core-crm/objects/Donation_Cause__c/validationRules/Description_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

ISCHANGED(Ready_For_Publishing__c),
Ready_For_Publishing__c = true,
ISBLANK(Donation_Cause_Description__c)
)</errorConditionFormula>
    <errorDisplayField>Donation_Cause_Description__c</errorDisplayField>
    <errorMessage>Mandatory Field</errorMessage>
</ValidationRule>