src/core-crm/objects/Donation_Cause__c/validationRules/QA_Completed_Must_Be_True.validationRule-meta.xml
<ValidationRule>
    <fullName>QA_Completed_Must_Be_True</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

ISCHANGED(Ready_For_Publishing__c),
Ready_For_Publishing__c = true,
QA_Completed__c = false
)</errorConditionFormula>
    <errorDisplayField>QA_Completed__c</errorDisplayField>
    <errorMessage>QA must be complete before cause is ready for publishing.</errorMessage>
</ValidationRule>