src/core-crm/objects/Donation_Cause__c/validationRules/QUT_Giving_Publish_Start_Date_isRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>QUT_Giving_Publish_Start_Date_isRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

ISCHANGED(Ready_For_Publishing__c),
Ready_For_Publishing__c = true,
ISBLANK(QUT_Giving_Publish_Start_Date__c)

)</errorConditionFormula>
    <errorDisplayField>QUT_Giving_Publish_Start_Date__c</errorDisplayField>
    <errorMessage>Mandatory Field</errorMessage>
</ValidationRule>