src/core-crm/objects/Donation_Cause__c/validationRules/RT_Activation_Publish_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>RT_Activation_Publish_End_Date</fullName>
    <active>true</active>
    <description>Activation End Date should be less than or equal to Publishing End Date.</description>
    <errorConditionFormula>AND(
    OR(
        ISNEW(),
        ISCHANGED(Activation_End_Date__c)
    ),
    NOT(ISBLANK(Activation_End_Date__c)),
    Activation_End_Date__c &gt; QUT_Giving_Publish_End_Date__c 
)</errorConditionFormula>
    <errorMessage>Activation End Date should be less than or equal to Publishing End Date</errorMessage>
</ValidationRule>