src/core-crm/objects/Donation_Cause__c/validationRules/RT_Activation_Publish_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>RT_Activation_Publish_Start_Date</fullName>
    <active>true</active>
    <description>Activation Start Date should be less than or equal to QUT Giving Start Date.</description>
    <errorConditionFormula>AND(
    OR(
        ISNEW(),
        ISCHANGED(Activation_Start_Date__c)
    ),
    NOT(ISBLANK(Activation_Start_Date__c)),
    Activation_Start_Date__c &gt; QUT_Giving_Publish_Start_Date__c 
)</errorConditionFormula>
    <errorMessage>Activation Start Date should be less than or equal to Publishing Start Date</errorMessage>
</ValidationRule>