src/core-crm/objects/Donation_Cause__c/validationRules/RT_Activation_Staff_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>RT_Activation_Staff_End_Date</fullName>
    <active>true</active>
    <description>Activation End Date should be less than or equal to Staff Giving Portal Publish End Date.</description>
    <errorConditionFormula>AND(
    OR(
        ISNEW(),
        ISCHANGED(Activation_End_Date__c)
    ),
    NOT(ISBLANK(Activation_End_Date__c)),
    Activation_End_Date__c &gt;  Staff_Giving_Portal_Publish_End_Date__c  
)</errorConditionFormula>
    <errorMessage>Activation End Date should be less than or equal to Staff Giving Portal Publish End Date.</errorMessage>
</ValidationRule>