src/core-crm/objects/Donation_Cause__c/validationRules/RT_Activation_Start_Date_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>RT_Activation_Start_Date_End_Date</fullName>
    <active>true</active>
    <description>Activation Start Date should be less than Activation End Date</description>
    <errorConditionFormula>AND(
    OR(
        ISNEW(),
        ISCHANGED(Activation_Start_Date__c)
    ),
    NOT(ISBLANK(Activation_Start_Date__c)),
    Activation_Start_Date__c &gt;= Activation_End_Date__c
)</errorConditionFormula>
    <errorMessage>Activation Start Date should be less than Activation End Date</errorMessage>
</ValidationRule>