src/core-crm/objects/Donation_Cause__c/validationRules/RT_Publish_Activation_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>RT_Publish_Activation_End_Date</fullName>
    <active>true</active>
    <description>Publishing End Date should be less than or equal to Activation End Date.</description>
    <errorConditionFormula>AND(
    OR(
        ISNEW(),
        ISCHANGED(QUT_Giving_Publish_End_Date__c)
    ),    
    NOT(ISBLANK(QUT_Giving_Publish_End_Date__c)),
    QUT_Giving_Publish_End_Date__c &gt; Activation_End_Date__c 
)</errorConditionFormula>
    <errorMessage>Publishing End Date should be less than or equal to Activation End Date.</errorMessage>
</ValidationRule>