src/core-crm/objects/Donation_Cause__c/validationRules/RT_Publish_Activation_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>RT_Publish_Activation_Start_Date</fullName>
    <active>true</active>
    <description>Publishing Start Date should be greater than or equal to Activation Start Date.</description>
    <errorConditionFormula>AND(
    OR(
        ISNEW(),
        ISCHANGED(QUT_Giving_Publish_Start_Date__c)
    ),    
    NOT(ISBLANK(QUT_Giving_Publish_Start_Date__c)),
    QUT_Giving_Publish_Start_Date__c &lt; Activation_Start_Date__c  
)</errorConditionFormula>
    <errorMessage>Publishing Start Date should be greater than or equal to Activation Start Date.</errorMessage>
</ValidationRule>