src/core-crm/objects/Donation_Cause__c/validationRules/RT_Publish_End_Date_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>RT_Publish_End_Date_Start_Date</fullName>
    <active>true</active>
    <description>Publishing End Date should be greater than Publishing Start Date.</description>
    <errorConditionFormula>AND(
    OR(
        ISNEW(),
        ISCHANGED(QUT_Giving_Publish_End_Date__c)
    ),
    NOT(ISBLANK(QUT_Giving_Publish_End_Date__c)),
    QUT_Giving_Publish_End_Date__c &lt;= QUT_Giving_Publish_Start_Date__c
)</errorConditionFormula>
    <errorMessage>Publishing End Date should be greater than Publishing Start Date.</errorMessage>
</ValidationRule>