src/core-crm/objects/Donation_Cause__c/validationRules/RT_Publish_Start_Date_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>RT_Publish_Start_Date_End_Date</fullName>
    <active>true</active>
    <description>Publishing Start Date should be less than Publishing End Date.</description>
    <errorConditionFormula>AND(
    OR(
        ISNEW(),
        ISCHANGED(QUT_Giving_Publish_Start_Date__c)
    ),
    NOT(ISBLANK(QUT_Giving_Publish_Start_Date__c)),
    QUT_Giving_Publish_Start_Date__c &gt;=  QUT_Giving_Publish_End_Date__c 
)</errorConditionFormula>
    <errorMessage>Publishing Start Date should be less than Publishing End Date.</errorMessage>
</ValidationRule>