src/core-crm/objects/Donation_Cause__c/validationRules/RT_Staff_Activation_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>RT_Staff_Activation_End_Date</fullName>
    <active>true</active>
    <description>Staff Giving Portal Publish End Date should be less than or equal to Activation End Date.</description>
    <errorConditionFormula>AND(
    OR(
        ISNEW(),
        ISCHANGED(Staff_Giving_Portal_Publish_End_Date__c)
    ),
    NOT(ISBLANK(Staff_Giving_Portal_Publish_End_Date__c)),
    Staff_Giving_Portal_Publish_End_Date__c &gt; Activation_End_Date__c  
)</errorConditionFormula>
    <errorMessage>Staff Giving Portal Publish End Date should be less than or equal to Activation End Date.</errorMessage>
</ValidationRule>