src/core-crm/objects/Donation_Cause__c/validationRules/RT_Staff_Activation_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>RT_Staff_Activation_Start_Date</fullName>
    <active>true</active>
    <description>Staff Giving Portal Publish Start Date should be greater than Activation Start Date.</description>
    <errorConditionFormula>AND(
    OR(
        ISNEW(),
        ISCHANGED(Staff_Giving_Portal_Publish_Start_Date__c)
    ),
    NOT(ISBLANK(Staff_Giving_Portal_Publish_Start_Date__c)),
    Staff_Giving_Portal_Publish_Start_Date__c &lt; Activation_Start_Date__c   
)</errorConditionFormula>
    <errorMessage>Staff Giving Portal Publish Start Date should be greater than Activation Start Date.</errorMessage>
</ValidationRule>