src/core-crm/objects/Donation_Cause__c/validationRules/Staff_Giving_Portal_Publish_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Staff_Giving_Portal_Publish_Start_Date</fullName>
    <active>true</active>
    <description>If Is_Staff_Giving_Cause__c is checked then field value must be provided during Cause setup.</description>
    <errorConditionFormula>AND( Is_Staff_Giving_Cause__c = True, ISBLANK(  Staff_Giving_Portal_Publish_Start_Date__c  ) )</errorConditionFormula>
    <errorDisplayField>Staff_Giving_Portal_Publish_Start_Date__c</errorDisplayField>
    <errorMessage>Staff Giving Portal Publish Start Date is required when Is Staff Giving Cause is checked.</errorMessage>
</ValidationRule>