src/core-crm/objects/Donation_Cause__c/validationRules/Title_Image_URL_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Title_Image_URL_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

ISCHANGED(Ready_For_Publishing__c),
Ready_For_Publishing__c = true,
ISBLANK(Title_Image_URL__c)
)</errorConditionFormula>
    <errorDisplayField>Title_Image_URL__c</errorDisplayField>
    <errorMessage>Mandatory Field</errorMessage>
</ValidationRule>