src/core-crm/objects/Donation_Cause__c/listViews/All_Donation_Causes.listView-meta.xml
<ListView>
    <fullName>All_Donation_Causes</fullName>
    <columns>NAME</columns>
    <columns>Donation_Cause_Code__c</columns>
    <columns>Stage__c</columns>
    <columns>Owner_Full_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Donation Causes</label>
    <sharedTo>
        <group>Advancement</group>
    </sharedTo>
</ListView>